docs: Update Swagger HRIS API description
