# cmd/server/main.go
@@ -6,25 +6,15 @@ import (
 	"github.com/shunwuse/go-hris/routes"
 )
 
-// @title           Swagger Example API
+// @title           Swagger HRIS API
 // @version         1.0
-// @description     This is a sample server celler server.
+// @description     This is a sample server HRIS API.
 // @termsOfService  http://swagger.io/terms/
-
-// @contact.name   API Support
-// @contact.url    http://www.swagger.io/support
-// @contact.email  support@swagger.io
-
-// @license.name  Apache 2.0
-// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host      localhost:8080
 // @BasePath  /
 
 // @securityDefinitions.basic  BasicAuth
-
-// @externalDocs.description  OpenAPI
-// @externalDocs.url          https://swagger.io/resources/open-api/
 
 func main() {
 	env := lib.NewEnv()
